--- a/templates/job-migration.yaml
+++ b/templates/job-migration.yaml
@@ -15,9 +15,10 @@ metadata:
     {{- with .Values.deployment.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
+  annotations:
     helm.sh/hook-weight: "1"
     helm.sh/hook: "pre-install, pre-upgrade"
-    helm.sh/hook-delete-policy: "before-hook-creation,hook-succeeded"
+    helm.sh/hook-delete-policy: "before-hook-creation, hook-succeeded"
 spec:
   template:
     spec:
